# message-broker

./: .gitignore  Makefile  pyproject.toml  test-report.xml
.ci-config/: message_broker.yaml
.configs/: application.yaml  message_broker.yaml
.github/workflows/: ci.yaml  sync-to-A-Team-VPL.yaml
message_broker/: __init__.py  client.py  configurations.py  consumer.py  messages.py  mixin.py  publisher.py
message_broker/abstract/: broker.py  client.py  component_factory.py
message_broker/adapters/: __init__.py  redis_adapter.py
src/message_broker/: configurations.py  consumer.py  messages.py  mixin.py  publisher.py  test.py  types.py
src/message_broker/abstract/: __init__.py  broker.py  component_factory.py
src/message_broker/adapters/: __init__.py  redis_adapter.py
src/message_broker/test/: fixtures.py
tests/e2e/: test_client.py
